# OpenMP_intro_tutorial

./: CMakeLists.txt  README.md  hello.cpp  linked.cpp  mandel.cpp  pi.cpp  pi_mc.cpp  prod_cons.cpp  random.hpp
